SUBDIRS =            	\
 DiffractionPatterns	\
 CorrugatedDisc     	\
 CubeTorus           	\
 GetTMatrix             \
 HalfSpaceLDOS          \
 ImplicitSubstrate      \
 MicrostripDevices  	\
 PaulTrap               \
 PlateWithHole          \
 PerforatedThinFilm     \
 PlatonicSolids         \
 SiO2Spheres            \
 SiliconBeams           \
 SolidSphere            \
 SphericalShell         \
 StriplineCapacitor     \
 ThinFilm               \
 TwoBodyCapacitors      \
 WireAntenna		\
 YagiUdaAntennas     
