bin_PROGRAMS = \
 scuff-test-overlap

scuff_test_overlap_SOURCES =	\
 scuff-test-overlap.cc

scuff_test_overlap_LDADD     = $(top_builddir)/src/libs/libscuff/libscuff.la


AM_CPPFLAGS = -DSCUFF \
              -I$(top_srcdir)/src/libs/libscuff      \
              -I$(top_srcdir)/src/libs/libIncField   \
              -I$(top_srcdir)/src/libs/libMatProp    \
              -I$(top_srcdir)/src/libs/libMDInterp    \
              -I$(top_srcdir)/src/libs/libhmat       \
              -I$(top_srcdir)/src/libs/libSGJC       \
              -I$(top_srcdir)/src/libs/libTriInt     \
              -I$(top_srcdir)/src/libs/libhrutil
