bin_PROGRAMS = scuff-ldos

scuff_ldos_SOURCES = 		\
 scuff-ldos.h			\
 scuff-ldos.cc         		\
 CreateSLDData.cc 		\
 GetLDOS.cc			\
 AnalyticalDGFs.cc

scuff_ldos_LDADD = $(top_builddir)/libs/libscuff/libscuff.la

AM_CPPFLAGS = -I$(top_srcdir)/libs/libscuff      \
              -I$(top_srcdir)/libs/libIncField   \
              -I$(top_srcdir)/libs/libMatProp    \
              -I$(top_srcdir)/libs/libMDInterp   \
              -I$(top_srcdir)/libs/libhmat       \
              -I$(top_srcdir)/libs/libSGJC       \
              -I$(top_srcdir)/libs/libSubstrate  \
              -I$(top_srcdir)/libs/libSpherical  \
              -I$(top_srcdir)/libs/libTriInt     \
              -I$(top_srcdir)/libs/libhrutil
