EXTRA_DIST=			\
 Plate.geo			\
 CorrugatedDisc.geo		\
 Plate_105.msh			\
 Plate_294.msh			\
 Plate_R20_477.msh		\
 FlatDisc_2001.msh		\
 CorrugatedDisc_1143.msh	\
 CorrugatedDisc_2634.msh	\
 EPFile1       			\
 EPFile2       			\
 PECPlate_105.scuffgeo		\
 PECPlate_294.scuffgeo		\
 PECPlate_R20_477.scuffgeo	\
 FlatDisc_2001.scuffgeo		\
 CorrugatedDisc_1143.scuffgeo	\
 CorrugatedDisc_Interpolated_1143.scuffgeo	\
 CorrugatedDisc_2634.scuffgeo	\
 SapphireModel.dat		\
 Rubidium.dat     		\
 CommandLineExamples

pkgdatadir = $(datadir)/scuff-em/examples/CorrugatedDisc
nodist_pkgdata_DATA = ${EXTRA_DIST}
