EXTRA_DIST=				\
 EPFile					\
 OmegaFile				\
 EightPoints				\
 mshFiles/Square_L0P1_40.msh            \
 mshFiles/Square_L0P1_176.msh           \
 mshFiles/Square_L0P01_40.msh           \
 mshFiles/Square_L0P01_176.msh          \
 scuffgeoFiles/AlHalfSpace_L0P1_40.scuffgeo	\
 scuffgeoFiles/AlHalfSpace_L0P1_176.scuffgeo	\
 scuffgeoFiles/AlHalfSpace_L0P01_40.scuffgeo	\
 scuffgeoFiles/AlHalfSpace_L0P01_176.scuffgeo	\
 scuffgeoFiles/E10HalfSpace_L0P1_40.scuffgeo	\
 scuffgeoFiles/E10HalfSpace_L0P1_176.scuffgeo	\
 scuffgeoFiles/E10HalfSpace_L0P01_40.scuffgeo	\
 scuffgeoFiles/E10HalfSpace_L0P01_176.scuffgeo	\
 scuffgeoFiles/PECPlate_L0P1_40.scuffgeo	\
 scuffgeoFiles/PECPlate_L0P1_176.scuffgeo	\
 scuffgeoFiles/PECPlate_L0P01_40.scuffgeo	\
 scuffgeoFiles/PECPlate_L0P01_176.scuffgeo

SUBDIRS = mshFiles scuffgeoFiles

pkgdatadir = $(datadir)/scuff-em/examples/HalfSpaceLDOS
nodist_pkgdata_DATA = ${EXTRA_DIST}
