EXTRA_DIST=				\
  E10HalfSpace.substrate		\
  E10SlabGP.substrate			\
  E10Slab.substrate			\
  EPFile				\
  PotentialFile				\
  Plotter.gp   				\
  Square_40.msh				\
  Square_40.scuffgeo			\
  RunScript

pkgdatadir = $(datadir)/scuff-em/examples/ImplicitSubstrate
nodist_pkgdata_DATA = ${EXTRA_DIST}


